fix horizontal scrolling and adaptive fixes

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,6 @@ body {
 
 .header {
   display: flex;
-  margin-bottom: 1.5rem;
   padding: 0.5rem 0;
   background: #1E293B;
 }
@@ -60,26 +59,19 @@ body {
 .container {
   max-width: 80rem;
   margin: auto;
+  padding-block: 2rem;
+
+  &.announcement-container {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    position: relative;
+  }
 }
 
 .announcement-heading {
-  display: flex;
-  align-items: center;
-  flex-wrap: wrap;
-  margin-bottom: 4rem;
-  justify-content: center;
-  position: relative;
-
-  &:after {
-    content: '';
-    position: absolute;
-    bottom: -2rem;
-    left: 50%;
-    width: 100vw;
-    transform: translateX(-50%);
-    height: 0.06rem;
-    background-color: #E2DBFC;
-  }
+  border-bottom: 1px solid #E2DBFC;
 
   &__title {
     margin-right: 1.5rem;
@@ -156,7 +148,7 @@ body {
 }
 
 .recommendations-title {
-  margin-bottom: 1.5rem;
+  padding-bottom: 1.5rem;
   font-weight: 600;
   font-size: 1.5rem;
   line-height: 2rem;
@@ -167,7 +159,6 @@ body {
   grid-template-columns: repeat(4, minmax(12.5rem, 1fr));
   grid-gap: 1.5rem;
   justify-content: center;
-  padding-bottom: 3rem;
 }
 
 .ad {
@@ -175,6 +166,11 @@ body {
   flex-direction: column;
   padding: 0;
   color: inherit;
+
+  &:hover > &__img {
+    transform: translateY(-5px);
+    transition: transform 0.3s ease-in-out;
+  }
 
   &__img {
     width: 100%;
@@ -191,11 +187,6 @@ body {
       object-fit: cover;
       border-radius: 0.5rem;
     }
-  }
-
-  &__img:hover {
-    transform: translateY(-5px);
-    transition: transform 0.3s ease-in-out;
   }
 
   &__title {
@@ -231,14 +222,14 @@ body {
     width: 100%;
     padding-inline: 0.8rem;
   }
-  .announcement-heading {
-    margin: 0 0.8rem 4rem;
+  .announcement-container {
+    padding-inline: 0.8rem;
   }
   .recommendations-title {
-    margin: 0 0 1.5rem 0.8rem;
+    padding: 0 0 1.5rem 0.8rem;
   }
   .ads-grid {
-    margin-inline: 0.8rem;
+    padding-inline: 0.8rem;
   }
 }
 
@@ -246,7 +237,6 @@ body {
   .ads-grid {
     grid-template-columns: repeat(2, minmax(12.5rem, 1fr));
   }
-
   .announcement-heading {
     &__title {
       font-size: 1.8rem;
@@ -266,32 +256,22 @@ body {
   }
 
   .announcement-heading {
-
     &__title {
       margin-right: 0;
     }
 
     &__form-container {
       flex-basis: 100%;
-      margin-bottom: 1rem;
     }
   }
 }
 
 @media (max-width: 575.98px) {
-
   .announcement-heading {
-    margin-bottom: 3vw;
-
-    &:after {
-      background-color: transparent;
-    }
-
     input::placeholder {
       font-size: 0.8rem;
     }
   }
-
   .ads-grid {
     grid-template-columns: repeat(1, minmax(12.5rem, 1fr));
   }
